fixes IE alignment issues in profiles

--- a/app/components/Viz/index.css
+++ b/app/components/Viz/index.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   & .d3plus {
-    flex: 1;
+    flex: 1 1 auto;
   }
 }
