--- a/app/profile/Embed.css
+++ b/app/profile/Embed.css
@@ -11,7 +11,7 @@
         flex: none;
       }
       & .topic-visualization {
-        flex: 1;
+        flex: 1 1 auto;
       }
     }
   }
